--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.10.2",
+    "@mantine/dropzone": "^5.10.2",
+    "@mantine/form": "^5.10.2",
+    "@mantine/hooks": "^5.10.2",
+    "@tabler/icons": "^2.1.2",
     "dotenv": "^16.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.3.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
@@ -42,8 +49,8 @@
     "@types/react-dom": "^18.0.2",
     "@vitejs/plugin-react": "^1.3.1",
     "concurrently": "^7.1.0",
-    "react-query": "^3.21.0",
     "glob": "^8.0.1",
+    "react-query": "^3.21.0",
     "vite": "^2.9.5"
   }
 }
